--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 		<script src="https://d3js.org/d3.v4.js"></script>
 		<script src="https://d3js.org/d3-array.v2.min.js"></script>
 		<script src="https://d3js.org/queue.v1.min.js"></script>
-		<script src="/lib/clustering/clustering.min.js"></script>
-		<script src="/lib/d3-tip/d3-tip.js"></script>
-		<script src="/lib/jquery/jquery.min.js"></script>
-		<script src="/js/main.js"></script>
+		<script src="https://volodymyrlut.github.io/masters-project/lib/clustering/clustering.min.js"></script>
+		<script src="https://volodymyrlut.github.io/masters-project/lib/d3-tip/d3-tip.js"></script>
+		<script src="https://volodymyrlut.github.io/masters-project/lib/jquery/jquery.min.js"></script>
+		<script src="https://volodymyrlut.github.io/masters-project/js/main.js"></script>
 	</body>
 </html>
