--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="/lib/d3-tip/d3-tip.css"/>
-		<link rel="stylesheet" type="text/css" href="/css/main.css"/>
+		<link rel="stylesheet" type="text/css" href="https://volodymyrlut.github.io/masters-project/lib/d3-tip/d3-tip.css"/>
+		<link rel="stylesheet" type="text/css" href="https://volodymyrlut.github.io/masters-project/css/main.css"/>
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
